--- a/index.html
+++ b/index.html
@@ -326,9 +326,17 @@
                         </header>
 
                         <div class="experience__content">
-                            <div class="experience__title-content"></div>
-                            <div class="experience__range"></div>
+                            <div class="experience__title-content">INET</div>
+                            <div class="experience__range">APRIL 2022 - MAY 2024</div>
                             <div class="experience__details">
+                                <p class="experience__details-description">
+                                    <i class="ri-checkbox-line experience__details-icon"></i>
+                                    Collaborate with the app development team, including the project manager, developers, and quality assurance specialists, to identify problems, and best practices.
+                                </p>
+                                <p class="experience__details-description">
+                                    <i class="ri-checkbox-line experience__details-icon"></i>
+                                    Used tech stack like Nuxt, Express, MySQL, Docker, Git, GitLab CI/CD to develop software.
+                                </p>
                             </div>
                         </div>
                     </div>
