--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
 
                         <div class="experience__content">
                             <div class="experience__title-content">INET</div>
+                            <div class="experience__range">SOFTWARE ENGINEER</div>
                             <div class="experience__range">APRIL 2022 - MAY 2024</div>
                             <div class="experience__details">
                                 <p class="experience__details-description">
