--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
                     title="npm">
                 <img src="assets/img/mysql.png" alt="" class="skills__img" data-toggle="tooltip" data-placement="top"
                     title="MySql">
+                <img src="assets/img/nuxt.png" alt="" class="skills__img" data-toggle="tooltip" data-placement="top"
+                    title="nuxt">
+                <img src="assets/img/docker.png" alt="" class="skills__img" data-toggle="tooltip" data-placement="top"
+                    title="docker">
+                <img src="assets/img/git.png" alt="" class="skills__img" data-toggle="tooltip" data-placement="top"
+                    title="git">
             </div>
 
             <p class="skills__description">
@@ -329,15 +335,32 @@
                             <div class="experience__title-content">INET</div>
                             <div class="experience__range">SOFTWARE ENGINEER</div>
                             <div class="experience__range">APRIL 2022 - MAY 2024</div>
-                            <div class="experience__details">
-                                <p class="experience__details-description">
-                                    <i class="ri-checkbox-line experience__details-icon"></i>
-                                    Collaborate with the app development team, including the project manager, developers, and quality assurance specialists, to identify problems, and best practices.
-                                </p>
-                                <p class="experience__details-description">
-                                    <i class="ri-checkbox-line experience__details-icon"></i>
-                                    Used tech stack like Nuxt, Express, MySQL, Docker, Git, GitLab CI/CD to develop software.
-                                </p>
+                            <div class="experience__content">
+                                <div class="experience__title-content">INET</div>
+                                <div class="experience__range">SOFTWARE ENGINEER</div>
+                                <div class="experience__range">APRIL 2022 - MAY 2024</div>
+                                <div class="experience__details">
+                                    <p class="experience__details-description">
+                                        <i class="ri-checkbox-line experience__details-icon"></i>
+                                        Collaborate with the app development team, including the project manager, developers, and quality assurance specialists, to identify problems, and best practices.
+                                    </p>
+                                    <p class="experience__details-description">
+                                        <i class="ri-checkbox-line experience__details-icon"></i>
+                                        Create and deliver highly efficient application-based solutions to optimize the company’s complaints handling process.
+                                    </p>
+                                    <p class="experience__details-description">
+                                        <i class="ri-checkbox-line experience__details-icon"></i>
+                                        Write clean code, drive technical design, and take responsibility for technical delivery.
+                                    </p>
+                                    <p class="experience__details-description">
+                                        <i class="ri-checkbox-line experience__details-icon"></i>
+                                        Used tech stack like Nuxt, Express, MySQL, Docker, Git, GitLab CI/CD to develop software.
+                                    </p>
+                                    <p class="experience__details-description">
+                                        <i class="ri-checkbox-line experience__details-icon"></i>
+                                        Help the software support team adjust programming to solve production issues
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
