--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                     <div class="home__social-links">
                         <a
-                            href="linkedin.com/in/pornsuda-mongkolpan"
+                            href="https://linkedin.com/in/pornsuda-mongkolpan"
                             target="_blank"
                             class="home__social-link"
                         >
@@ -621,7 +621,7 @@
                     <div class="footer__social">
 
                         <a
-                            href="linkedin.com/in/pornsuda-mongkolpan"
+                            href="https://linkedin.com/in/pornsuda-mongkolpan"
                             target="_blank"
                             class="footer__social-link"
                         >
