--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                                     December 20, 2021
                                 </p>
                                 <a
-                                    href="https://drive.google.com/file/d/1eEyoeF8bRqyIR21LYwFbmr5yEPoYCeB7/view?usp=sharing"
+                                    href="https://www.freecodecamp.org/certification/maameeaaw/javascript-algorithms-and-data-structures"
                                     target="_blank"
                                     class="button certification__button"
                                 >
@@ -389,7 +389,7 @@
                                     January 30, 2022
                                 </p>
                                 <a
-                                    href="https://drive.google.com/file/d/1Ko2A25Z4-5-SkXQfEEK_El9QsNDZXlWo/view?usp=sharing"
+                                    href="https://www.freecodecamp.org/certification/maameeaaw/responsive-web-design"
                                     target="_blank"
                                     class="button certification__button"
                                 >
