--- a/index.html
+++ b/index.html
@@ -125,13 +125,12 @@
                         ( mameaw )
                     </h1>
                     <p class="home__description">
-                        I graduated from king mongkut's university technology
-                        north bangkok. Where I studied in Computer
-                        Science. I ready to learn new things.
-                        Passionate Software Engineer with 2 years of hands-on
-                        experience in developing scalable
-                        websites/applications using a wide range of front-end
-                        and back-end skills like Node.js, Nuxt JS, Docker, etc.
+                        Brings 2 years of professional experience as a software engineer,
+                        proficient in developing full-stack web applications using technologies such as Node.js, Nuxt.js, Docker, 
+                        and related frameworks.
+                        I thrive on the challenge of developing intricate applications and interactive experiences that are informative and accessible. 
+                        I'm driven to continuously enhance my proficiency in the latest web technologies, 
+                        consistently striving to evolve into a more knowledgeable and effective developer.
                     </p>
                 </div>
 
@@ -468,6 +467,48 @@
                         Source code
                     </a>
                 </article>
+
+                <article class="project__card">
+
+                    <img
+                        src="assets/img/ksp662.png"
+                        alt=""
+                        class="project__img"
+                    >
+
+                    <h3 class="project__title">Examination Application System of The Secretariat Office of The Teachers' Council of Thailand</h3>
+                   
+
+                    <a
+                        href="https://ksp662.thaijobjob.com/"
+                        target="_blank"
+                        class="button--flex project__button"
+                    >
+                        <i class="ri-link"></i>
+                        Website
+                    </a>
+                </article>
+
+                <article class="project__card">
+
+                    <img
+                        src="assets/img/police.png"
+                        alt=""
+                        class="project__img"
+                    >
+
+                    <h3 class="project__title">Examination Application System of Police Admission Division</h3>
+                   
+
+                    <a
+                        href="https://policeadmission.thaijobjob.com/"
+                        target="_blank"
+                        class="button--flex project__button"
+                    >
+                        <i class="ri-link"></i>
+                        Website
+                    </a>
+                </article>
             </div>
         </section>
 
@@ -542,37 +583,35 @@
                                 <p class="experience__details-description">
                                     <i
                                         class="ri-checkbox-line experience__details-icon"></i>
-                                    Collaborate with the app development team,
-                                    including the project manager, developers,
-                                    and quality assurance specialists, to
-                                    identify problems, and best practices.
+                                        Collaborate with coordination team, including project managers, 
+                                        developers, and quality assurance specialists, 
+                                        to identify potential issues, implement best practices, 
+                                        and ensure seamless project execution.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
                                         class="ri-checkbox-line experience__details-icon"></i>
-                                    Create and deliver highly efficient
-                                    application-based solutions to optimize the
-                                    company’s complaints handling process.
+                                        Design and implement a robust web application capable of seamlessly handling over 50,000 concurrent users, 
+                                        while developing and deploying high-performance, tailored application solutions that effectively meet and exceed customer requirements.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
                                         class="ri-checkbox-line experience__details-icon"></i>
-                                    Write clean code, drive technical design,
-                                    and take responsibility for technical
-                                    delivery.
+                                        Develop clean, modular, and easily maintainable codebase, 
+                                        architect robust technical designs, 
+                                        and take full responsibility for delivering high-quality, 
+                                        scalable, and efficient technical solutions.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
                                         class="ri-checkbox-line experience__details-icon"></i>
-                                    Used tech stack like Nuxt, Express, MySQL,
-                                    Docker, Git, GitLab CI/CD to develop
-                                    software.
+                                        Collaborate closely with the support team to refine and optimize the codebase, 
+                                        promptly addressing and resolving production issues.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
                                         class="ri-checkbox-line experience__details-icon"></i>
-                                    Help the software support team adjust
-                                    programming to solve production issues
+                                        Developed software using a tech stack that includes Nuxt, Express, MySQL, Docker, and Git.
                                 </p>
                             </div>
                         </div>
