--- a/index.html
+++ b/index.html
@@ -125,12 +125,18 @@
                         ( mameaw )
                     </h1>
                     <p class="home__description">
-                        Brings 2 years of professional experience as a software engineer,
-                        proficient in developing full-stack web applications using technologies such as Node.js, Nuxt.js, Docker, 
+                        Brings 2 years of professional experience as a software
+                        engineer,
+                        proficient in developing full-stack web applications
+                        using technologies such as Node.js, Nuxt.js, Docker,
                         and related frameworks.
-                        I thrive on the challenge of developing intricate applications and interactive experiences that are informative and accessible. 
-                        I'm driven to continuously enhance my proficiency in the latest web technologies, 
-                        consistently striving to evolve into a more knowledgeable and effective developer.
+                        I thrive on the challenge of developing intricate
+                        applications and interactive experiences that are
+                        informative and accessible.
+                        I'm driven to continuously enhance my proficiency in the
+                        latest web technologies,
+                        consistently striving to evolve into a more
+                        knowledgeable and effective developer.
                     </p>
                 </div>
 
@@ -476,8 +482,10 @@
                         class="project__img"
                     >
 
-                    <h3 class="project__title">Examination Application System of The Secretariat Office of The Teachers' Council of Thailand</h3>
-                   
+                    <h3 class="project__title">Examination Application System of
+                        The Secretariat Office of The Teachers' Council of
+                        Thailand</h3>
+
 
                     <a
                         href="https://ksp662.thaijobjob.com/"
@@ -497,8 +505,9 @@
                         class="project__img"
                     >
 
-                    <h3 class="project__title">Examination Application System of Police Admission Division</h3>
-                   
+                    <h3 class="project__title">Examination Application System of
+                        Police Admission Division</h3>
+
 
                     <a
                         href="https://policeadmission.thaijobjob.com/"
@@ -508,6 +517,51 @@
                         <i class="ri-link"></i>
                         Website
                     </a>
+                </article>
+
+                <article class="project__card">
+
+                    <img
+                        src="assets/img/tdc.png"
+                        alt=""
+                        class="project__img"
+                    >
+                    <h3 class="project__title">Student Member Registration
+                        System of The Dental Council of Thailand</h3>
+
+
+
+                    <a
+                        href="https://tdc-regis.thaijobjob.com/student/"
+                        target="_blank"
+                        class="button--flex project__button"
+                    >
+                        <i class="ri-link"></i>
+                        Website
+                    </a>
+                </article>
+
+                <article class="project__card">
+                    <h3 class="project__title">HR Welfare</h3>
+                    <span class="project__subtitle">Internal Welfare Management System</span>
+                    <div class="project__details">
+                        <p class="project__details-description">
+                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            Overtime Work Payment System
+                        </p>
+                        <p class="project__details-description">
+                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            Shift Management
+                        </p>
+                        <p class="project__details-description">
+                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            Petty Cash
+                        </p>
+                        <p class="project__details-description">
+                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            Certification Request Management System
+                        </p>
+                    </div>
                 </article>
             </div>
         </section>
@@ -539,23 +593,23 @@
                             <div class="experience__details">
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
                                     Working an average 40 hours per week
                                 </p>
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
                                     Developed in internship about Paper bag
                                     Plant with MRP Solution
                                 </p>
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
                                     Design MySQL structure
                                 </p>
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
                                     Coding project both Frontend as Backend
                                     using by HTML, Bootstrap 4,
                                     CSS, PHP, JavaScript and AJAX
@@ -582,36 +636,50 @@
                             <div class="experience__details">
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
-                                        Collaborate with coordination team, including project managers, 
-                                        developers, and quality assurance specialists, 
-                                        to identify potential issues, implement best practices, 
-                                        and ensure seamless project execution.
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
+                                    Collaborate with coordination team,
+                                    including project managers,
+                                    developers, and quality assurance
+                                    specialists,
+                                    to identify potential issues, implement best
+                                    practices,
+                                    and ensure seamless project execution.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
-                                        Design and implement a robust web application capable of seamlessly handling over 50,000 concurrent users, 
-                                        while developing and deploying high-performance, tailored application solutions that effectively meet and exceed customer requirements.
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
+                                    Design and implement a robust web
+                                    application capable of seamlessly handling
+                                    over 50,000 concurrent users,
+                                    while developing and deploying
+                                    high-performance, tailored application
+                                    solutions that effectively meet and exceed
+                                    customer requirements.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
-                                        Develop clean, modular, and easily maintainable codebase, 
-                                        architect robust technical designs, 
-                                        and take full responsibility for delivering high-quality, 
-                                        scalable, and efficient technical solutions.
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
+                                    Develop clean, modular, and easily
+                                    maintainable codebase,
+                                    architect robust technical designs,
+                                    and take full responsibility for delivering
+                                    high-quality,
+                                    scalable, and efficient technical solutions.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
-                                        Collaborate closely with the support team to refine and optimize the codebase, 
-                                        promptly addressing and resolving production issues.
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
+                                    Collaborate closely with the support team to
+                                    refine and optimize the codebase,
+                                    promptly addressing and resolving production
+                                    issues.
                                 </p>
                                 <p class="experience__details-description">
                                     <i
-                                        class="ri-checkbox-line experience__details-icon"></i>
-                                        Developed software using a tech stack that includes Nuxt, Express, MySQL, Docker, and Git.
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
+                                    Developed software using a tech stack that
+                                    includes Nuxt, Express, MySQL, Docker, and
+                                    Git.
                                 </p>
                             </div>
                         </div>
