--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
                             class="nav__link"
                         >Experience</a>
                     </li>
+                    <li class="nav__item">
+                        <a
+                            href="https://www.canva.com/design/DAGEGeawfTA/N3yQTcDmMZBreJuaKQY6sA/view?utm_content=DAGEGeawfTA&utm_campaign=designshare&utm_medium=link&utm_source=editor"
+                            target="_blank"
+                            class="nav__link"
+                        >Resume</a>
+                    </li>
                 </ul>
 
                 <div
