--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
                 >
             </div>
 
-            <p class="skills__description">
+            <!-- <p class="skills__description">
                 <i class="ri-hashtag about__details-icon"></i>
-                Building resposive website frontend using VueJS
+                Building resposive website frontend using NuxtJS
             </p>
             <p class="skills__description">
                 <i class="ri-hashtag about__details-icon"></i>
-                Creating application backend in PHP(Laravel)
-            </p>
+                Creating application backend in NodeJS(Express)
+            </p> -->
 
         </section>
 
