add kanban board

--- a/index.html
+++ b/index.html
@@ -570,6 +570,28 @@
                         </p>
                     </div>
                 </article>
+
+                <article class="project__card">
+
+                    <img
+                        src="assets/img/nuxt3example.png"
+                        alt=""
+                        class="project__img"
+                    >
+
+                    <h3 class="project__title">kanban board</h3>
+                    <span class="project__subtitle">This project is work for
+                        practice programming using nuxt3, nodejs and typescript </span>
+
+                    <a
+                        href="https://github.com/maameeaaw/ticket"
+                        target="_blank"
+                        class="button--flex project__button"
+                    >
+                        <i class="ri-link"></i>
+                        Source code
+                    </a>
+                </article>
             </div>
         </section>
 
