--- a/index.html
+++ b/index.html
@@ -550,22 +550,27 @@
 
                 <article class="project__card">
                     <h3 class="project__title">HR Welfare</h3>
-                    <span class="project__subtitle">Internal Welfare Management System</span>
+                    <span class="project__subtitle">Internal Welfare Management
+                        System</span>
                     <div class="project__details">
                         <p class="project__details-description">
-                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            <i
+                                class="ri-arrow-drop-right-fill project__details-icon"></i>
                             Overtime Work Payment System
                         </p>
                         <p class="project__details-description">
-                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            <i
+                                class="ri-arrow-drop-right-fill project__details-icon"></i>
                             Shift Management
                         </p>
                         <p class="project__details-description">
-                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            <i
+                                class="ri-arrow-drop-right-fill project__details-icon"></i>
                             Petty Cash
                         </p>
                         <p class="project__details-description">
-                            <i class="ri-arrow-drop-right-fill project__details-icon"></i>
+                            <i
+                                class="ri-arrow-drop-right-fill project__details-icon"></i>
                             Certification Request Management System
                         </p>
                     </div>
@@ -581,7 +586,8 @@
 
                     <h3 class="project__title">kanban board</h3>
                     <span class="project__subtitle">This project is work for
-                        practice programming using nuxt3, nodejs and typescript </span>
+                        practice programming using nuxt3, nodejs and typescript
+                    </span>
 
                     <a
                         href="https://github.com/maameeaaw/ticket"
@@ -709,6 +715,26 @@
                                     Developed software using a tech stack that
                                     includes Nuxt, Express, MySQL, Docker, and
                                     Git.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="experience__content">
+                            <div class="experience__title-content">General
+                                Electronic Commerce Services Co., Ltd.</div>
+                            <div class="experience__range">SOFTWARE ENGINEER (contract)
+                            </div>
+                            <div class="experience__range">AUGUST 2024 - JANUARY
+                                2025
+                            </div>
+                            <div class="experience__details">
+                                <p class="experience__details-description">
+                                    <i
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
+                                    Develop a document management system for
+                                    Thailand Post, designed for internal
+                                    document workflow within the organization,
+                                    utilizing Nuxt.js for the frontend and
+                                    Nest.js for the backend.
                                 </p>
                             </div>
                         </div>
