update work exp

--- a/index.html
+++ b/index.html
@@ -205,6 +205,14 @@
                     title="css"
                 >
                 <img
+                    src="assets/img/tailwind.png"
+                    alt=""
+                    class="skills__img"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="css"
+                >
+                <img
                     src="assets/img/js.png"
                     alt=""
                     class="skills__img"
@@ -663,6 +671,27 @@
                             </h3>
                         </header>
                         <div class="experience__content">
+                            <!-- GEC -->
+                            <div class="experience__title-content">General
+                                Electronic Commerce Services Co., Ltd.</div>
+                            <div class="experience__range">SOFTWARE ENGINEER
+                                (contract)
+                            </div>
+                            <div class="experience__range">AUGUST 2024 - JANUARY
+                                2025
+                            </div>
+                            <div class="experience__details">
+                                <p class="experience__details-description">
+                                    <i
+                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
+                                    Develop a document management system for
+                                    Thailand Post, designed for internal
+                                    document workflow within the organization,
+                                    utilizing Nuxt.js for the frontend and
+                                    Nest.js for the backend.
+                                </p>
+                            </div>
+                            <!-- INET -->
                             <div class="experience__title-content">INET</div>
                             <div class="experience__range">SOFTWARE ENGINEER
                             </div>
@@ -717,27 +746,10 @@
                                     Git.
                                 </p>
                             </div>
+
+
                         </div>
-                        <div class="experience__content">
-                            <div class="experience__title-content">General
-                                Electronic Commerce Services Co., Ltd.</div>
-                            <div class="experience__range">SOFTWARE ENGINEER (contract)
-                            </div>
-                            <div class="experience__range">AUGUST 2024 - JANUARY
-                                2025
-                            </div>
-                            <div class="experience__details">
-                                <p class="experience__details-description">
-                                    <i
-                                        class="ri-arrow-drop-right-fill experience__details-icon"></i>
-                                    Develop a document management system for
-                                    Thailand Post, designed for internal
-                                    document workflow within the organization,
-                                    utilizing Nuxt.js for the frontend and
-                                    Nest.js for the backend.
-                                </p>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
 
